--- a/apps/opendosm/styles/dashboards/table.css
+++ b/apps/opendosm/styles/dashboards/table.css
@@ -1,28 +1,19 @@
 .table {
-  @apply relative mx-auto w-full table-auto border-collapse border-spacing-0 md:w-fit md:max-w-full;
+  @apply relative mx-auto w-full table-auto border-separate border-spacing-0 whitespace-nowrap md:w-fit;
 }
 
 .table-responsive {
-  @apply overflow-auto;
+  @apply relative overflow-x-auto;
+  /* max-sm:snap-x max-sm:snap-mandatory; */
 }
 
 .table th {
-  @apply w-auto pb-2 font-normal text-dim md:whitespace-nowrap;
+  @apply w-auto py-3 font-normal text-dim;
+  /* max-sm:snap-end; */
 }
+
 .table tbody tr {
-  @apply border-b-[0.5px] border-l-[0.5px] border-l-black;
-}
-
-.table tbody tr:first-child {
-  @apply border-t-[0.5px];
-}
-
-.table tbody tr:last-child {
-  @apply border-b-[0.5px] border-b-black;
-}
-
-.table td {
-  @apply w-auto border-r-[0.5px] px-2 py-2;
+  @apply bg-white;
 }
 /* .table td:not(:first-child) {
   @apply whitespace-nowrap;
@@ -36,23 +27,12 @@
   @apply text-left;
 }
 
-.table-sticky-first thead tr > th:first-child {
-  @apply sticky left-0 z-10 whitespace-normal bg-white md:whitespace-nowrap;
-}
-
-.table-sticky-first thead tr > th:not(:first-child) {
-  @apply whitespace-nowrap;
-}
-
-.table-sticky-first tbody tr > td:first-child {
-  @apply sticky left-0 z-10 bg-inherit;
-}
-.table-sticky-first tbody tr > td {
-  @apply whitespace-normal md:whitespace-nowrap;
-}
-
 .table-sticky-header tr > th {
-  @apply sticky top-0 bg-white;
+  @apply sticky top-0 border-b-2 border-b-outline bg-white;
+}
+
+.sticky-col {
+  @apply sticky z-10 border-outline bg-inherit max-lg:border-r-2;
 }
 
 /* .table tr > td:first-child {
@@ -66,12 +46,8 @@
   @apply border-t-black;
 }
 
-.table-stripe tr:nth-child(even) {
-  @apply bg-outline;
-}
-
-.table-stripe tbody tr:nth-child(odd) {
-  @apply bg-white;
+.table-stripe tr {
+  @apply even:bg-background;
 }
 
 .table-default th:first-child {
@@ -107,15 +83,15 @@
 .table-slate tr:first-child {
   @apply border-t-outline;
 }
-.table-default-slate th:first-child > div {
-  @apply text-left;
+/* .table-default-slate th:first-child > div {
+    @apply text-left;
 }
 .table-default-slate th:first-child {
-  @apply w-min;
+    @apply w-min;
 }
 .table-default-slate th {
-  @apply py-2;
-}
+    @apply py-2;
+} */
 .table-default-slate td {
   @apply border-r-0;
 }
