--- a/packages/datagovmy-nextra/style.css
+++ b/packages/datagovmy-nextra/style.css
@@ -551,8 +551,26 @@ input[type="search"]::-webkit-search-results-decoration {
 .bottom-0 {
   bottom: 0;
 }
+.bottom-4 {
+  bottom: 1rem;
+}
+.bottom-\[72px\] {
+  bottom: 72px;
+}
+.bottom-\[84px\] {
+  bottom: 84px;
+}
+.left-1\/2 {
+  left: 50%;
+}
 .right-0 {
   right: 0;
+}
+.right-4 {
+  right: 1rem;
+}
+.right-7 {
+  right: 1.75rem;
 }
 .top-0 {
   top: 0;
@@ -571,6 +589,9 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .z-20 {
   z-index: 20;
+}
+.z-50 {
+  z-index: 50;
 }
 .z-\[-1\] {
   z-index: -1;
@@ -602,6 +623,10 @@ input[type="search"]::-webkit-search-results-decoration {
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
+}
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
 }
 .mx-auto {
   margin-left: auto;
@@ -650,6 +675,9 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .mb-4 {
   margin-bottom: 1rem;
+}
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 .mb-8 {
   margin-bottom: 2rem;
@@ -726,6 +754,9 @@ input[type="search"]::-webkit-search-results-decoration {
 .hidden {
   display: none;
 }
+.aspect-square {
+  aspect-ratio: 1;
+}
 .h-0 {
   height: 0;
 }
@@ -756,6 +787,9 @@ input[type="search"]::-webkit-search-results-decoration {
 .max-h-64 {
   max-height: 16rem;
 }
+.max-h-\[30vh\] {
+  max-height: 30vh;
+}
 .max-h-\[calc\(100vh-var\(--nextra-navbar-height\)-env\(safe-area-inset-bottom\)\)\] {
   max-height: calc(100vh - var(--nextra-navbar-height) - env(safe-area-inset-bottom));
 }
@@ -765,8 +799,14 @@ input[type="search"]::-webkit-search-results-decoration {
 .min-h-\[100px\] {
   min-height: 100px;
 }
+.min-h-\[40px\] {
+  min-height: 40px;
+}
 .min-h-\[calc\(100vh-var\(--nextra-navbar-height\)\)\] {
   min-height: calc(100vh - var(--nextra-navbar-height));
+}
+.w-12 {
+  width: 3rem;
 }
 .w-3 {
   width: 0.75rem;
@@ -811,6 +851,9 @@ input[type="search"]::-webkit-search-results-decoration {
 .min-w-\[24px\] {
   min-width: 24px;
 }
+.min-w-\[32px\] {
+  min-width: 32px;
+}
 .min-w-full {
   min-width: 100%;
 }
@@ -837,6 +880,12 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .origin-center {
   transform-origin: 50%;
+}
+.-translate-x-1\/2 {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate))
+    skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x))
+    scaleY(var(--tw-scale-y));
 }
 .rotate-90 {
   --tw-rotate: 90deg;
@@ -948,6 +997,16 @@ input[type="search"]::-webkit-search-results-decoration {
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
+.space-y-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+.space-y-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+}
 .overflow-auto {
   overflow: auto;
 }
@@ -986,11 +1045,17 @@ input[type="search"]::-webkit-search-results-decoration {
 .whitespace-nowrap {
   white-space: nowrap;
 }
+.whitespace-pre-wrap {
+  white-space: pre-wrap;
+}
 .break-words {
   overflow-wrap: break-word;
 }
 .rounded {
   border-radius: 0.25rem;
+}
+.rounded-full {
+  border-radius: 9999px;
 }
 .rounded-lg {
   border-radius: 0.5rem;
@@ -1123,12 +1188,20 @@ input[type="search"]::-webkit-search-results-decoration {
 .bg-primary-700\/5 {
   background-color: hsl(var(--nextra-primary-hue) 100% 39%/0.05);
 }
+.bg-primary-dgm {
+  --tw-bg-opacity: 1;
+  background-color: rgba(37, 99, 235, var(--tw-bg-opacity));
+}
 .bg-red-100 {
   --tw-bg-opacity: 1;
   background-color: rgba(254, 226, 226, var(--tw-bg-opacity));
 }
 .bg-transparent {
   background-color: transparent;
+}
+.bg-washed {
+  --tw-bg-opacity: 1;
+  background-color: rgba(241, 245, 249, var(--tw-bg-opacity));
 }
 .bg-white {
   --tw-bg-opacity: 1;
@@ -1141,7 +1214,12 @@ input[type="search"]::-webkit-search-results-decoration {
 .bg-gradient-to-t {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
-.to-\[\#3E7AFF\] {
+.from-primary-dgm {
+  --tw-gradient-from: #2563eb var(--tw-gradient-from-position);
+  --tw-gradient-to: rgba(37, 99, 235, 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+.to-primary-dark {
   --tw-gradient-to: #3e7aff var(--tw-gradient-to-position);
 }
 .p-0 {
@@ -1155,6 +1233,9 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .p-2 {
   padding: 0.5rem;
+}
+.p-2\.5 {
+  padding: 0.625rem;
 }
 .p-4 {
   padding: 1rem;
@@ -1185,6 +1266,10 @@ input[type="search"]::-webkit-search-results-decoration {
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 .px-6 {
   padding-left: 1.5rem;
@@ -1246,6 +1331,9 @@ input[type="search"]::-webkit-search-results-decoration {
 .pl-\[max\(env\(safe-area-inset-left\)\,1\.5rem\)\] {
   padding-left: max(env(safe-area-inset-left), 1.5rem);
 }
+.pr-12 {
+  padding-right: 3rem;
+}
 .pr-4 {
   padding-right: 1rem;
 }
@@ -1261,8 +1349,14 @@ input[type="search"]::-webkit-search-results-decoration {
 .pt-12 {
   padding-top: 3rem;
 }
+.pt-3 {
+  padding-top: 0.75rem;
+}
 .pt-4 {
   padding-top: 1rem;
+}
+.pt-5 {
+  padding-top: 1.25rem;
 }
 .pt-6 {
   padding-top: 1.5rem;
@@ -1270,11 +1364,23 @@ input[type="search"]::-webkit-search-results-decoration {
 .pt-8 {
   padding-top: 2rem;
 }
+.pt-\[15\%\] {
+  padding-top: 15%;
+}
 .text-left {
   text-align: left;
 }
 .text-center {
   text-align: center;
+}
+.font-mono {
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, Liberation Mono, Courier New,
+    monospace;
+}
+.font-sans {
+  font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Noto Sans, Ubuntu, Cantarell, Helvetica Neue, Arial, sans-serif, Apple Color Emoji,
+    Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
 }
 .text-2xl {
   font-size: 1.5rem;
@@ -1452,6 +1558,12 @@ input[type="search"]::-webkit-search-results-decoration {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 transparent), var(--tw-ring-shadow, 0 0 transparent),
     var(--tw-shadow);
 }
+.shadow-2xl {
+  --tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 transparent), var(--tw-ring-shadow, 0 0 transparent),
+    var(--tw-shadow);
+}
 .shadow-\[0_-12px_16px_\#fff\] {
   --tw-shadow: 0 -12px 16px #fff;
   --tw-shadow-colored: 0 -12px 16px var(--tw-shadow-color);
@@ -1467,6 +1579,18 @@ input[type="search"]::-webkit-search-results-decoration {
 .shadow-\[0_2px_4px_rgba\(0\,0\,0\,\.02\)\,0_1px_0_rgba\(0\,0\,0\,\.06\)\] {
   --tw-shadow: 0 2px 4px rgba(0, 0, 0, 0.02), 0 1px 0 rgba(0, 0, 0, 0.06);
   --tw-shadow-colored: 0 2px 4px var(--tw-shadow-color), 0 1px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 transparent), var(--tw-ring-shadow, 0 0 transparent),
+    var(--tw-shadow);
+}
+.shadow-button {
+  --tw-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  --tw-shadow-colored: 0 1px 2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 transparent), var(--tw-ring-shadow, 0 0 transparent),
+    var(--tw-shadow);
+}
+.shadow-floating {
+  --tw-shadow: 0 6px 24px rgba(0, 0, 0, 0.1);
+  --tw-shadow-colored: 0 6px 24px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 transparent), var(--tw-ring-shadow, 0 0 transparent),
     var(--tw-shadow);
 }
@@ -1492,6 +1616,10 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .shadow-gray-100 {
   --tw-shadow-color: #f3f4f6;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+.shadow-primary-dgm {
+  --tw-shadow-color: #2563eb;
   --tw-shadow: var(--tw-shadow-colored);
 }
 .ring-1 {
@@ -1783,6 +1911,9 @@ html[data-nextra-word-wrap] pre .line {
 }
 pre .nextra-copy-icon {
   animation: 0.3s forwards fade-in;
+}
+pre {
+  white-space: pre-wrap;
 }
 @keyframes fade-in {
   0% {
@@ -2397,6 +2528,9 @@ input[type="search"]::-webkit-search-results-decoration {
   --tw-bg-opacity: 1;
   background-color: rgba(248, 250, 252, var(--tw-bg-opacity));
 }
+.hover\:to-\[\#5B8EFF\]:hover {
+  --tw-gradient-to: #5b8eff var(--tw-gradient-to-position);
+}
 .hover\:text-black:hover {
   --tw-text-opacity: 1;
   color: rgba(24, 24, 27, var(--tw-text-opacity));
@@ -2427,12 +2561,6 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .hover\:opacity-75:hover {
   opacity: 0.75;
-}
-.hover\:shadow:hover {
-  --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px -1px rgba(0, 0, 0, 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 transparent), var(--tw-ring-shadow, 0 0 transparent),
-    var(--tw-shadow);
 }
 .hover\:shadow-lg:hover {
   --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -4px rgba(0, 0, 0, 0.1);
@@ -2527,6 +2655,9 @@ input[type="search"]::-webkit-search-results-decoration {
 .active\:shadow-gray-200:active {
   --tw-shadow-color: #e5e7eb;
   --tw-shadow: var(--tw-shadow-colored);
+}
+.disabled\:opacity-50:disabled {
+  opacity: 0.5;
 }
 .group:hover .group-hover\:translate-x-\[2px\] {
   --tw-translate-x: 2px;
@@ -2833,11 +2964,18 @@ input[type="search"]::-webkit-search-results-decoration {
 :is(html[class~="dark"] .dark\:border-orange-400\/30) {
   border-color: rgba(251, 146, 60, 0.3);
 }
+:is(html[class~="dark"] .dark\:border-outlineHover-dark) {
+  --tw-border-opacity: 1;
+  border-color: rgba(63, 63, 70, var(--tw-border-opacity));
+}
 :is(html[class~="dark"] .dark\:border-primary-100\/10) {
   border-color: hsl(var(--nextra-primary-hue) 100% 94%/0.1);
 }
 :is(html[class~="dark"] .dark\:border-red-200\/30) {
   border-color: rgba(254, 202, 202, 0.3);
+}
+:is(html[class~="dark"] .dark\:border-transparent) {
+  border-color: transparent;
 }
 :is(html[class~="dark"] .dark\:border-washed-dark) {
   --tw-border-opacity: 1;
@@ -2851,6 +2989,14 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 :is(html[class~="dark"] .dark\:border-yellow-200\/30) {
   border-color: rgba(254, 240, 138, 0.3);
+}
+:is(html[class~="dark"] .dark\:bg-background-dark) {
+  --tw-bg-opacity: 1;
+  background-color: rgba(18, 18, 18, var(--tw-bg-opacity));
+}
+:is(html[class~="dark"] .dark\:bg-black) {
+  --tw-bg-opacity: 1;
+  background-color: rgba(24, 24, 27, var(--tw-bg-opacity));
 }
 :is(html[class~="dark"] .dark\:bg-black\/60) {
   background-color: rgba(24, 24, 27, 0.6);
@@ -2891,8 +3037,16 @@ input[type="search"]::-webkit-search-results-decoration {
 :is(html[class~="dark"] .dark\:bg-primary-500\/10) {
   background-color: hsl(var(--nextra-primary-hue) 100% 50%/0.1);
 }
+:is(html[class~="dark"] .dark\:bg-primary-dark) {
+  --tw-bg-opacity: 1;
+  background-color: rgba(62, 122, 255, var(--tw-bg-opacity));
+}
 :is(html[class~="dark"] .dark\:bg-red-900\/30) {
   background-color: rgba(127, 29, 29, 0.3);
+}
+:is(html[class~="dark"] .dark\:bg-washed-dark) {
+  --tw-bg-opacity: 1;
+  background-color: rgba(39, 39, 42, var(--tw-bg-opacity));
 }
 :is(html[class~="dark"] .dark\:bg-white\/10) {
   background-color: rgba(255, 255, 255, 0.1);
@@ -3240,12 +3394,27 @@ input[type="search"]::-webkit-search-results-decoration {
   }
 }
 @media (min-width: 1024px) {
+  .lg\:right-6 {
+    right: 1.5rem;
+  }
+  .lg\:top-6 {
+    top: 1.5rem;
+  }
+  .lg\:w-1\/4 {
+    width: 25%;
+  }
   .lg\:gap-x-6 {
     column-gap: 1.5rem;
+  }
+  .lg\:p-4 {
+    padding: 1rem;
   }
   .lg\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+  }
+  .lg\:text-sm {
+    font-size: 0.875rem;
   }
 }
 @media (min-width: 1280px) {
