--- a/packages/datagovmy-nextra/style.css
+++ b/packages/datagovmy-nextra/style.css
@@ -584,6 +584,33 @@ input[type="search"]::-webkit-search-results-decoration {
 .top-full {
   top: 100%;
 }
+.bottom-full {
+  bottom: 100%;
+}
+.right-1\/2 {
+  right: 50%;
+}
+.bottom-7 {
+  bottom: 1.75rem;
+}
+.left-0 {
+  left: 0;
+}
+.bottom-1 {
+  bottom: 0.25rem;
+}
+.left-5 {
+  left: 1.25rem;
+}
+.bottom-\[76px\] {
+  bottom: 76px;
+}
+.left-2 {
+  left: 0.5rem;
+}
+.bottom-\[80px\] {
+  bottom: 80px;
+}
 .z-10 {
   z-index: 10;
 }
@@ -607,6 +634,9 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .m-\[11px\] {
   margin: 11px;
+}
+.-m-3 {
+  margin: -0.75rem;
 }
 .-mx-6 {
   margin-left: -1.5rem;
@@ -727,6 +757,18 @@ input[type="search"]::-webkit-search-results-decoration {
 .mt-8 {
   margin-top: 2rem;
 }
+.mt-3 {
+  margin-top: 0.75rem;
+}
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+.ml-3 {
+  margin-left: 0.75rem;
+}
 .block {
   display: block;
 }
@@ -744,6 +786,9 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .table {
   display: table;
+}
+.flow-root {
+  display: flow-root;
 }
 .grid {
   display: grid;
@@ -784,6 +829,24 @@ input[type="search"]::-webkit-search-results-decoration {
 .h-full {
   height: 100%;
 }
+.h-3 {
+  height: 0.75rem;
+}
+.\!h-\[12px\] {
+  height: 12px !important;
+}
+.h-\[12px\] {
+  height: 12px;
+}
+.h-\[16px\] {
+  height: 16px;
+}
+.h-\[14px\] {
+  height: 14px;
+}
+.h-10 {
+  height: 2.5rem;
+}
 .max-h-64 {
   max-height: 16rem;
 }
@@ -804,6 +867,9 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .min-h-\[calc\(100vh-var\(--nextra-navbar-height\)\)\] {
   min-height: calc(100vh - var(--nextra-navbar-height));
+}
+.min-h-\[12px\] {
+  min-height: 12px;
 }
 .w-12 {
   width: 3rem;
@@ -839,6 +905,29 @@ input[type="search"]::-webkit-search-results-decoration {
 .w-screen {
   width: 100vw;
 }
+.\!w-\[12px\] {
+  width: 12px !important;
+}
+.w-\[16px\] {
+  width: 16px;
+}
+.w-\[14px\] {
+  width: 14px;
+}
+.w-10 {
+  width: 2.5rem;
+}
+.w-1\/4 {
+  width: 25%;
+}
+.w-fit {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+.w-1\/5 {
+  width: 20%;
+}
 .min-w-0 {
   min-width: 0;
 }
@@ -857,6 +946,9 @@ input[type="search"]::-webkit-search-results-decoration {
 .min-w-full {
   min-width: 100%;
 }
+.min-w-\[12px\] {
+  min-width: 12px;
+}
 .max-w-6xl {
   max-width: 72rem;
 }
@@ -871,6 +963,18 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .max-w-screen-2xl {
   max-width: 1536px;
+}
+.max-w-sm {
+  max-width: 24rem;
+}
+.max-w-\[300px\] {
+  max-width: 300px;
+}
+.max-w-\[400px\] {
+  max-width: 400px;
+}
+.max-w-\[200px\] {
+  max-width: 200px;
 }
 .shrink-0 {
   flex-shrink: 0;
@@ -887,8 +991,32 @@ input[type="search"]::-webkit-search-results-decoration {
     skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x))
     scaleY(var(--tw-scale-y));
 }
+.translate-y-0 {
+  --tw-translate-y: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate))
+    skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x))
+    scaleY(var(--tw-scale-y));
+}
+.translate-y-1 {
+  --tw-translate-y: 0.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate))
+    skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x))
+    scaleY(var(--tw-scale-y));
+}
+.-translate-x-full {
+  --tw-translate-x: -100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate))
+    skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x))
+    scaleY(var(--tw-scale-y));
+}
 .rotate-90 {
   --tw-rotate: 90deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate))
+    skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x))
+    scaleY(var(--tw-scale-y));
+}
+.rotate-180 {
+  --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate))
     skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x))
     scaleY(var(--tw-scale-y));
@@ -980,6 +1108,9 @@ input[type="search"]::-webkit-search-results-decoration {
 .gap-4 {
   gap: 1rem;
 }
+.gap-8 {
+  gap: 2rem;
+}
 .gap-x-3 {
   column-gap: 0.75rem;
 }
@@ -1007,11 +1138,24 @@ input[type="search"]::-webkit-search-results-decoration {
   margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
+.space-x-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-x-1 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
+}
 .overflow-auto {
   overflow: auto;
 }
 .overflow-hidden {
   overflow: hidden;
+}
+.overflow-visible {
+  overflow: visible;
 }
 .overflow-x-auto {
   overflow-x: auto;
@@ -1211,6 +1355,18 @@ input[type="search"]::-webkit-search-results-decoration {
   --tw-bg-opacity: 1;
   background-color: rgba(254, 252, 232, var(--tw-bg-opacity));
 }
+.bg-gray-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
+}
+.bg-orange-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(194, 65, 12, var(--tw-bg-opacity));
+}
+.bg-dim {
+  --tw-bg-opacity: 1;
+  background-color: rgba(113, 113, 122, var(--tw-bg-opacity));
+}
 .bg-gradient-to-t {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
@@ -1242,6 +1398,9 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .p-8 {
   padding: 2rem;
+}
+.p-7 {
+  padding: 1.75rem;
 }
 .px-1 {
   padding-left: 0.25rem;
@@ -1366,6 +1525,12 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .pt-\[15\%\] {
   padding-top: 15%;
+}
+.pl-3 {
+  padding-left: 0.75rem;
+}
+.pl-5 {
+  padding-left: 1.25rem;
 }
 .text-left {
   text-align: left;
@@ -1530,6 +1695,16 @@ input[type="search"]::-webkit-search-results-decoration {
   --tw-text-opacity: 1;
   color: rgba(113, 63, 18, var(--tw-text-opacity));
 }
+.text-orange-300 {
+  --tw-text-opacity: 1;
+  color: rgba(253, 186, 116, var(--tw-text-opacity));
+}
+.text-opacity-70 {
+  --tw-text-opacity: 0.7;
+}
+.text-opacity-90 {
+  --tw-text-opacity: 0.9;
+}
 .underline {
   text-decoration-line: underline;
 }
@@ -1632,6 +1807,13 @@ input[type="search"]::-webkit-search-results-decoration {
 .ring-black\/5 {
   --tw-ring-color: rgba(24, 24, 27, 0.05);
 }
+.ring-black {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgba(24, 24, 27, var(--tw-ring-opacity));
+}
+.ring-opacity-5 {
+  --tw-ring-opacity: 0.05;
+}
 .blur {
   --tw-blur: blur(8px);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale)
@@ -1691,8 +1873,17 @@ input[type="search"]::-webkit-search-results-decoration {
 .duration-75 {
   transition-duration: 75ms;
 }
+.duration-150 {
+  transition-duration: 0.15s;
+}
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.ease-in {
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+}
+.ease-out {
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 .\[-webkit-tap-highlight-color\:transparent\] {
   -webkit-tap-highlight-color: transparent;
@@ -2561,6 +2752,10 @@ input[type="search"]::-webkit-search-results-decoration {
   --tw-bg-opacity: 1;
   background-color: rgba(248, 250, 252, var(--tw-bg-opacity));
 }
+.hover\:bg-gray-50:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
+}
 .hover\:to-\[\#5B8EFF\]:hover {
   --tw-gradient-to: #5b8eff var(--tw-gradient-to-position);
 }
@@ -2579,6 +2774,9 @@ input[type="search"]::-webkit-search-results-decoration {
 .hover\:text-primary-600:hover {
   --tw-text-opacity: 1;
   color: hsl(var(--nextra-primary-hue) 100% 45% / var(--tw-text-opacity));
+}
+.hover\:text-opacity-100:hover {
+  --tw-text-opacity: 1;
 }
 .hover\:underline:hover {
   text-decoration-line: underline;
@@ -2672,6 +2870,38 @@ input[type="search"]::-webkit-search-results-decoration {
   --tw-text-opacity: 1;
   color: rgba(17, 24, 39, var(--tw-text-opacity));
 }
+.focus\:outline-none:focus {
+  outline-offset: 2px;
+  outline: 2px solid transparent;
+}
+.focus-visible\:ring:focus-visible {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width)
+    var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width))
+    var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 transparent);
+}
+.focus-visible\:ring-2:focus-visible {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width)
+    var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width))
+    var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 transparent);
+}
+.focus-visible\:ring-orange-500:focus-visible {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgba(249, 115, 22, var(--tw-ring-opacity));
+}
+.focus-visible\:ring-white:focus-visible {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgba(255, 255, 255, var(--tw-ring-opacity));
+}
+.focus-visible\:ring-opacity-50:focus-visible {
+  --tw-ring-opacity: 0.5;
+}
+.focus-visible\:ring-opacity-75:focus-visible {
+  --tw-ring-opacity: 0.75;
+}
 .active\:bg-gray-400\/20:active {
   background-color: rgba(156, 163, 175, 0.2);
 }
@@ -2692,11 +2922,20 @@ input[type="search"]::-webkit-search-results-decoration {
 .disabled\:opacity-50:disabled {
   opacity: 0.5;
 }
+.group:hover .group-hover\:visible {
+  visibility: visible;
+}
+.group:hover .group-hover\:flex {
+  display: flex;
+}
 .group:hover .group-hover\:translate-x-\[2px\] {
   --tw-translate-x: 2px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate))
     skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x))
     scaleY(var(--tw-scale-y));
+}
+.group:hover .group-hover\:text-opacity-80 {
+  --tw-text-opacity: 0.8;
 }
 :is([dir="ltr"] .ltr\:right-1) {
   right: 0.25rem;
@@ -3359,6 +3598,16 @@ input[type="search"]::-webkit-search-results-decoration {
   .sm\:flex {
     display: flex;
   }
+  .sm\:h-12 {
+    height: 3rem;
+  }
+  .sm\:w-12 {
+    width: 3rem;
+  }
+  .sm\:px-0 {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 @media (min-width: 768px) {
   .md\:relative {
@@ -3433,8 +3682,29 @@ input[type="search"]::-webkit-search-results-decoration {
   .lg\:top-6 {
     top: 1.5rem;
   }
+  .lg\:flex {
+    display: flex;
+  }
   .lg\:w-1\/4 {
     width: 25%;
+  }
+  .lg\:max-w-3xl {
+    max-width: 48rem;
+  }
+  .lg\:max-w-md {
+    max-width: 28rem;
+  }
+  .lg\:max-w-\[400px\] {
+    max-width: 400px;
+  }
+  .lg\:max-w-\[320px\] {
+    max-width: 320px;
+  }
+  .lg\:max-w-\[280px\] {
+    max-width: 280px;
+  }
+  .lg\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
   .lg\:gap-x-6 {
     column-gap: 1.5rem;
@@ -3453,6 +3723,21 @@ input[type="search"]::-webkit-search-results-decoration {
 @media (min-width: 1280px) {
   .xl\:block {
     display: block;
+  }
+  .xl\:w-1\/4 {
+    width: 25%;
+  }
+  .xl\:max-w-\[400px\] {
+    max-width: 400px;
+  }
+  .xl\:max-w-\[360px\] {
+    max-width: 360px;
+  }
+  .xl\:max-w-\[320px\] {
+    max-width: 320px;
+  }
+  .xl\:max-w-\[300px\] {
+    max-width: 300px;
   }
   :is([dir="ltr"] .ltr\:xl\:ml-\[calc\(50\%-50vw\+16rem\)\]) {
     margin-left: calc(50% - 50vw + 16rem);
