--- a/packages/datagovmy-nextra/css/codeblock.css
+++ b/packages/datagovmy-nextra/css/codeblock.css
@@ -26,6 +26,7 @@ code {
 pre {
   /* content-visibility: auto; */
   contain: paint;
+
   code {
     @apply grid min-w-full rounded-none border-none !bg-transparent !p-0 text-sm leading-5 text-current dark:!bg-transparent;
     .line {
@@ -48,6 +49,15 @@ pre {
   .nextra-copy-icon {
     animation: fade-in 0.3s ease forwards;
   }
+}
+
+/* AI Helper CSS */
+pre {
+  @apply bg-outline bg-primary-700/5 dark:bg-primary-300/10 overflow-x-auto whitespace-pre-wrap break-words rounded-xl border border-black border-opacity-[0.04] px-[.25em] py-4 text-[.9em] font-medium subpixel-antialiased;
+}
+
+code {
+  @apply bg-outline break-words rounded-md border border-black border-opacity-[0.04] px-[.25em] py-0.5 text-[.9em] dark:bg-white/10 dark:text-white;
 }
 
 @keyframes fade-in {
