fix: ai styling

--- a/packages/datagovmy-nextra/css/styles.css
+++ b/packages/datagovmy-nextra/css/styles.css
@@ -7,7 +7,7 @@
 @import "./hamburger.css";
 @import "./scrollbar.css";
 @import "./typesetting-article.css";
-
+@import "./ai.css";
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Poppins:wght@700&display=swap");
 
