--- a/packages/datagovmy-nextra/style.css
+++ b/packages/datagovmy-nextra/style.css
@@ -557,11 +557,23 @@ input[type="search"]::-webkit-search-results-decoration {
 .bottom-\[72px\] {
   bottom: 72px;
 }
+.bottom-\[80px\] {
+  bottom: 80px;
+}
 .bottom-\[84px\] {
   bottom: 84px;
 }
+.bottom-full {
+  bottom: 100%;
+}
+.left-0 {
+  left: 0;
+}
 .left-1\/2 {
   left: 50%;
+}
+.left-5 {
+  left: 1.25rem;
 }
 .right-0 {
   right: 0;
@@ -583,33 +595,6 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .top-full {
   top: 100%;
-}
-.bottom-full {
-  bottom: 100%;
-}
-.right-1\/2 {
-  right: 50%;
-}
-.bottom-7 {
-  bottom: 1.75rem;
-}
-.left-0 {
-  left: 0;
-}
-.bottom-1 {
-  bottom: 0.25rem;
-}
-.left-5 {
-  left: 1.25rem;
-}
-.bottom-\[76px\] {
-  bottom: 76px;
-}
-.left-2 {
-  left: 0.5rem;
-}
-.bottom-\[80px\] {
-  bottom: 80px;
 }
 .z-10 {
   z-index: 10;
@@ -634,9 +619,6 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .m-\[11px\] {
   margin: 11px;
-}
-.-m-3 {
-  margin: -0.75rem;
 }
 .-mx-6 {
   margin-left: -1.5rem;
@@ -697,6 +679,9 @@ input[type="search"]::-webkit-search-results-decoration {
 .-mt-20 {
   margin-top: -5rem;
 }
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
 .mb-12 {
   margin-bottom: 3rem;
 }
@@ -714,9 +699,6 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .ml-1 {
   margin-left: 0.25rem;
-}
-.ml-2 {
-  margin-left: 0.5rem;
 }
 .ml-4 {
   margin-left: 1rem;
@@ -745,6 +727,9 @@ input[type="search"]::-webkit-search-results-decoration {
 .mt-2 {
   margin-top: 0.5rem;
 }
+.mt-3 {
+  margin-top: 0.75rem;
+}
 .mt-4 {
   margin-top: 1rem;
 }
@@ -756,18 +741,6 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .mt-8 {
   margin-top: 2rem;
-}
-.mt-3 {
-  margin-top: 0.75rem;
-}
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-.mb-1 {
-  margin-bottom: 0.25rem;
-}
-.ml-3 {
-  margin-left: 0.75rem;
 }
 .block {
   display: block;
@@ -786,9 +759,6 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .table {
   display: table;
-}
-.flow-root {
-  display: flow-root;
 }
 .grid {
   display: grid;
@@ -829,24 +799,6 @@ input[type="search"]::-webkit-search-results-decoration {
 .h-full {
   height: 100%;
 }
-.h-3 {
-  height: 0.75rem;
-}
-.\!h-\[12px\] {
-  height: 12px !important;
-}
-.h-\[12px\] {
-  height: 12px;
-}
-.h-\[16px\] {
-  height: 16px;
-}
-.h-\[14px\] {
-  height: 14px;
-}
-.h-10 {
-  height: 2.5rem;
-}
 .max-h-64 {
   max-height: 16rem;
 }
@@ -867,9 +819,6 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .min-h-\[calc\(100vh-var\(--nextra-navbar-height\)\)\] {
   min-height: calc(100vh - var(--nextra-navbar-height));
-}
-.min-h-\[12px\] {
-  min-height: 12px;
 }
 .w-12 {
   width: 3rem;
@@ -895,6 +844,11 @@ input[type="search"]::-webkit-search-results-decoration {
 .w-\[200px\] {
   width: 200px;
 }
+.w-fit {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
 .w-full {
   width: 100%;
 }
@@ -904,29 +858,6 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .w-screen {
   width: 100vw;
-}
-.\!w-\[12px\] {
-  width: 12px !important;
-}
-.w-\[16px\] {
-  width: 16px;
-}
-.w-\[14px\] {
-  width: 14px;
-}
-.w-10 {
-  width: 2.5rem;
-}
-.w-1\/4 {
-  width: 25%;
-}
-.w-fit {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-}
-.w-1\/5 {
-  width: 20%;
 }
 .min-w-0 {
   min-width: 0;
@@ -946,11 +877,11 @@ input[type="search"]::-webkit-search-results-decoration {
 .min-w-full {
   min-width: 100%;
 }
-.min-w-\[12px\] {
-  min-width: 12px;
-}
 .max-w-6xl {
   max-width: 72rem;
+}
+.max-w-\[200px\] {
+  max-width: 200px;
 }
 .max-w-\[50\%\] {
   max-width: 50%;
@@ -963,18 +894,6 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .max-w-screen-2xl {
   max-width: 1536px;
-}
-.max-w-sm {
-  max-width: 24rem;
-}
-.max-w-\[300px\] {
-  max-width: 300px;
-}
-.max-w-\[400px\] {
-  max-width: 400px;
-}
-.max-w-\[200px\] {
-  max-width: 200px;
 }
 .shrink-0 {
   flex-shrink: 0;
@@ -1003,20 +922,8 @@ input[type="search"]::-webkit-search-results-decoration {
     skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x))
     scaleY(var(--tw-scale-y));
 }
-.-translate-x-full {
-  --tw-translate-x: -100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate))
-    skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x))
-    scaleY(var(--tw-scale-y));
-}
 .rotate-90 {
   --tw-rotate: 90deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate))
-    skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x))
-    scaleY(var(--tw-scale-y));
-}
-.rotate-180 {
-  --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate))
     skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x))
     scaleY(var(--tw-scale-y));
@@ -1108,9 +1015,6 @@ input[type="search"]::-webkit-search-results-decoration {
 .gap-4 {
   gap: 1rem;
 }
-.gap-8 {
-  gap: 2rem;
-}
 .gap-x-3 {
   column-gap: 0.75rem;
 }
@@ -1123,6 +1027,11 @@ input[type="search"]::-webkit-search-results-decoration {
 .gap-y-6 {
   row-gap: 1.5rem;
 }
+.space-x-1 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
+}
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1133,29 +1042,21 @@ input[type="search"]::-webkit-search-results-decoration {
   margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
 }
+.space-y-6 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
+}
 .space-y-8 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
-}
-.space-x-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-.space-x-1 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .overflow-auto {
   overflow: auto;
 }
 .overflow-hidden {
   overflow: hidden;
-}
-.overflow-visible {
-  overflow: visible;
 }
 .overflow-x-auto {
   overflow-x: auto;
@@ -1188,9 +1089,6 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .whitespace-nowrap {
   white-space: nowrap;
-}
-.whitespace-pre-wrap {
-  white-space: pre-wrap;
 }
 .break-words {
   overflow-wrap: break-word;
@@ -1355,18 +1253,6 @@ input[type="search"]::-webkit-search-results-decoration {
   --tw-bg-opacity: 1;
   background-color: rgba(254, 252, 232, var(--tw-bg-opacity));
 }
-.bg-gray-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
-}
-.bg-orange-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(194, 65, 12, var(--tw-bg-opacity));
-}
-.bg-dim {
-  --tw-bg-opacity: 1;
-  background-color: rgba(113, 113, 122, var(--tw-bg-opacity));
-}
 .bg-gradient-to-t {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
@@ -1398,9 +1284,6 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .p-8 {
   padding: 2rem;
-}
-.p-7 {
-  padding: 1.75rem;
 }
 .px-1 {
   padding-left: 0.25rem;
@@ -1523,15 +1406,6 @@ input[type="search"]::-webkit-search-results-decoration {
 .pt-8 {
   padding-top: 2rem;
 }
-.pt-\[15\%\] {
-  padding-top: 15%;
-}
-.pl-3 {
-  padding-left: 0.75rem;
-}
-.pl-5 {
-  padding-left: 1.25rem;
-}
 .text-left {
   text-align: left;
 }
@@ -1585,9 +1459,6 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .font-medium {
   font-weight: 500;
-}
-.font-normal {
-  font-weight: 400;
 }
 .font-semibold {
   font-weight: 600;
@@ -1695,16 +1566,6 @@ input[type="search"]::-webkit-search-results-decoration {
   --tw-text-opacity: 1;
   color: rgba(113, 63, 18, var(--tw-text-opacity));
 }
-.text-orange-300 {
-  --tw-text-opacity: 1;
-  color: rgba(253, 186, 116, var(--tw-text-opacity));
-}
-.text-opacity-70 {
-  --tw-text-opacity: 0.7;
-}
-.text-opacity-90 {
-  --tw-text-opacity: 0.9;
-}
 .underline {
   text-decoration-line: underline;
 }
@@ -1804,12 +1665,12 @@ input[type="search"]::-webkit-search-results-decoration {
     var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 transparent);
 }
-.ring-black\/5 {
-  --tw-ring-color: rgba(24, 24, 27, 0.05);
-}
 .ring-black {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgba(24, 24, 27, var(--tw-ring-opacity));
+}
+.ring-black\/5 {
+  --tw-ring-color: rgba(24, 24, 27, 0.05);
 }
 .ring-opacity-5 {
   --tw-ring-opacity: 0.05;
@@ -1861,6 +1722,9 @@ input[type="search"]::-webkit-search-results-decoration {
 .duration-100 {
   transition-duration: 0.1s;
 }
+.duration-150 {
+  transition-duration: 0.15s;
+}
 .duration-200 {
   transition-duration: 0.2s;
 }
@@ -1873,14 +1737,11 @@ input[type="search"]::-webkit-search-results-decoration {
 .duration-75 {
   transition-duration: 75ms;
 }
-.duration-150 {
-  transition-duration: 0.15s;
+.ease-in {
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.ease-in {
-  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
@@ -2103,42 +1964,6 @@ html[data-nextra-word-wrap] pre .line {
 pre .nextra-copy-icon {
   animation: 0.3s forwards fade-in;
 }
-pre {
-  white-space: pre-wrap;
-  overflow-wrap: break-word;
-  border-width: 1px;
-  border-color: rgba(24, 24, 27, var(--tw-border-opacity));
-  --tw-border-opacity: 0.04;
-  --tw-bg-opacity: 1;
-  background-color: rgba(226, 232, 240, var(--tw-bg-opacity));
-  background-color: hsl(var(--nextra-primary-hue) 100% 39%/0.05);
-  -webkit-font-smoothing: auto;
-  -moz-osx-font-smoothing: auto;
-  border-radius: 0.75rem;
-  padding: 1rem 0.25em;
-  font-size: 0.9em;
-  font-weight: 500;
-  overflow-x: auto;
-}
-:is(html[class~="dark"] pre) {
-  background-color: hsl(var(--nextra-primary-hue) 100% 77%/0.1);
-}
-code {
-  overflow-wrap: break-word;
-  border-width: 1px;
-  border-color: rgba(24, 24, 27, var(--tw-border-opacity));
-  --tw-border-opacity: 0.04;
-  --tw-bg-opacity: 1;
-  background-color: rgba(226, 232, 240, var(--tw-bg-opacity));
-  border-radius: 0.375rem;
-  padding: 0.125rem 0.25em;
-  font-size: 0.9em;
-}
-:is(html[class~="dark"] code) {
-  --tw-text-opacity: 1;
-  color: rgba(255, 255, 255, var(--tw-text-opacity));
-  background-color: rgba(255, 255, 255, 0.1);
-}
 @keyframes fade-in {
   0% {
     opacity: 0;
@@ -2325,6 +2150,68 @@ article.nextra-body-typesetting-article .subheading-anchor + a:after {
 }
 article.nextra-body-typesetting-article .subheading-anchor + a:hover {
   text-decoration-line: none;
+}
+.ai pre {
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
+  border-width: 1px;
+  border-color: rgba(24, 24, 27, var(--tw-border-opacity));
+  --tw-border-opacity: 0.04;
+  --tw-bg-opacity: 1;
+  background-color: rgba(226, 232, 240, var(--tw-bg-opacity));
+  background-color: hsl(var(--nextra-primary-hue) 100% 39%/0.05);
+  -webkit-font-smoothing: auto;
+  -moz-osx-font-smoothing: auto;
+  border-radius: 0.75rem;
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+  padding: 0.75rem;
+  font-size: 0.9em;
+  font-weight: 500;
+  overflow-x: auto;
+}
+:is(html[class~="dark"] .ai pre) {
+  background-color: hsl(var(--nextra-primary-hue) 100% 77%/0.1);
+}
+.ai code {
+  overflow-wrap: break-word;
+  border-width: 1px;
+  border-color: rgba(24, 24, 27, var(--tw-border-opacity));
+  --tw-border-opacity: 0.04;
+  --tw-bg-opacity: 1;
+  background-color: rgba(226, 232, 240, var(--tw-bg-opacity));
+  border-radius: 0.375rem;
+  padding: 0.125rem 0.25em;
+  font-size: 0.9em;
+}
+:is(html[class~="dark"] .ai code) {
+  --tw-text-opacity: 1;
+  color: rgba(255, 255, 255, var(--tw-text-opacity));
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.ai ul {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+  list-style-type: disc;
+  list-style-position: inside;
+}
+.ai ul > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+.ai ol {
+  margin-left: 1.25rem;
+  list-style-type: decimal;
+  list-style-position: outside;
+}
+.ai ol > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
+}
+.ai li > p {
+  display: inline;
 }
 html {
   -webkit-font-smoothing: antialiased;
@@ -2752,10 +2639,6 @@ input[type="search"]::-webkit-search-results-decoration {
   --tw-bg-opacity: 1;
   background-color: rgba(248, 250, 252, var(--tw-bg-opacity));
 }
-.hover\:bg-gray-50:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
-}
 .hover\:to-\[\#5B8EFF\]:hover {
   --tw-gradient-to: #5b8eff var(--tw-gradient-to-position);
 }
@@ -2774,9 +2657,6 @@ input[type="search"]::-webkit-search-results-decoration {
 .hover\:text-primary-600:hover {
   --tw-text-opacity: 1;
   color: hsl(var(--nextra-primary-hue) 100% 45% / var(--tw-text-opacity));
-}
-.hover\:text-opacity-100:hover {
-  --tw-text-opacity: 1;
 }
 .hover\:underline:hover {
   text-decoration-line: underline;
@@ -2870,38 +2750,6 @@ input[type="search"]::-webkit-search-results-decoration {
   --tw-text-opacity: 1;
   color: rgba(17, 24, 39, var(--tw-text-opacity));
 }
-.focus\:outline-none:focus {
-  outline-offset: 2px;
-  outline: 2px solid transparent;
-}
-.focus-visible\:ring:focus-visible {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width)
-    var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width))
-    var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 transparent);
-}
-.focus-visible\:ring-2:focus-visible {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width)
-    var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width))
-    var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 transparent);
-}
-.focus-visible\:ring-orange-500:focus-visible {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgba(249, 115, 22, var(--tw-ring-opacity));
-}
-.focus-visible\:ring-white:focus-visible {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgba(255, 255, 255, var(--tw-ring-opacity));
-}
-.focus-visible\:ring-opacity-50:focus-visible {
-  --tw-ring-opacity: 0.5;
-}
-.focus-visible\:ring-opacity-75:focus-visible {
-  --tw-ring-opacity: 0.75;
-}
 .active\:bg-gray-400\/20:active {
   background-color: rgba(156, 163, 175, 0.2);
 }
@@ -2925,17 +2773,11 @@ input[type="search"]::-webkit-search-results-decoration {
 .group:hover .group-hover\:visible {
   visibility: visible;
 }
-.group:hover .group-hover\:flex {
-  display: flex;
-}
 .group:hover .group-hover\:translate-x-\[2px\] {
   --tw-translate-x: 2px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate))
     skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x))
     scaleY(var(--tw-scale-y));
-}
-.group:hover .group-hover\:text-opacity-80 {
-  --tw-text-opacity: 0.8;
 }
 :is([dir="ltr"] .ltr\:right-1) {
   right: 0.25rem;
@@ -3598,12 +3440,6 @@ input[type="search"]::-webkit-search-results-decoration {
   .sm\:flex {
     display: flex;
   }
-  .sm\:h-12 {
-    height: 3rem;
-  }
-  .sm\:w-12 {
-    width: 3rem;
-  }
   .sm\:px-0 {
     padding-left: 0;
     padding-right: 0;
@@ -3626,9 +3462,6 @@ input[type="search"]::-webkit-search-results-decoration {
   }
   .md\:inline-block {
     display: inline-block;
-  }
-  .md\:inline {
-    display: inline;
   }
   .md\:inline-flex {
     display: inline-flex;
@@ -3682,35 +3515,14 @@ input[type="search"]::-webkit-search-results-decoration {
   .lg\:top-6 {
     top: 1.5rem;
   }
-  .lg\:flex {
-    display: flex;
-  }
-  .lg\:w-1\/4 {
-    width: 25%;
-  }
   .lg\:max-w-3xl {
     max-width: 48rem;
-  }
-  .lg\:max-w-md {
-    max-width: 28rem;
   }
   .lg\:max-w-\[400px\] {
     max-width: 400px;
   }
-  .lg\:max-w-\[320px\] {
-    max-width: 320px;
-  }
-  .lg\:max-w-\[280px\] {
-    max-width: 280px;
-  }
-  .lg\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
   .lg\:gap-x-6 {
     column-gap: 1.5rem;
-  }
-  .lg\:p-4 {
-    padding: 1rem;
   }
   .lg\:px-6 {
     padding-left: 1.5rem;
@@ -3724,17 +3536,8 @@ input[type="search"]::-webkit-search-results-decoration {
   .xl\:block {
     display: block;
   }
-  .xl\:w-1\/4 {
-    width: 25%;
-  }
-  .xl\:max-w-\[400px\] {
-    max-width: 400px;
-  }
-  .xl\:max-w-\[360px\] {
-    max-width: 360px;
-  }
-  .xl\:max-w-\[320px\] {
-    max-width: 320px;
+  .xl\:max-w-\[25\%\] {
+    max-width: 25%;
   }
   .xl\:max-w-\[300px\] {
     max-width: 300px;
