style: remove tap highlight colour in mobile

--- a/packages/datagovmy-ui/src/styles/globals.css
+++ b/packages/datagovmy-ui/src/styles/globals.css
@@ -47,6 +47,10 @@
   textarea {
     @apply resize-none;
   }
+
+  html {
+    -webkit-tap-highlight-color: transparent;
+  }
 }
 
 @layer components {
