Feat/open dosm dashboards (#210)
* initial wip for iip dashboard

* complete building the iip dashboard and page

* add i18n for iip dashboard contents

* amend changes from PR review #210

* move iip dashboard from datagovmy to opendosm

* add iip dashboard to dashboard index pages

--- a/packages/datagovmy-ui/src/styles/dashboards/table.css
+++ b/packages/datagovmy-ui/src/styles/dashboards/table.css
@@ -12,7 +12,7 @@
 }
 
 .table tbody tr {
-  @apply bg-white dark:bg-black border-outline dark:border-washed-dark border-b;
+  @apply border-outline dark:border-washed-dark border-b bg-white dark:bg-black;
 }
 
 /* .table thead tr th {
